# mesh-viewer

./: .gitignore  CMakeLists.txt  README.md
models/: triangle.ply
shaders/: normals.fs  normals.vs  phong-pixel.fs  phong-pixel.vs  phong-vertex.fs  phong-vertex.vs  toon.fs  toon.vs
src/: mesh-viewer.cpp  plymesh.cpp  plymesh.h  test-ply-mesh.cpp
src/agl/: renderer.cpp  renderer.h  shader.h  window.h
